--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,7 @@ caddy:
     io.rancher.container.pull_image: always
     io.rancher.scheduler.affinity:host_label: jmca.frontend=true
   command: /bin/sh
+  environment:
+    - HOSTS="cad3/isawesome;blu.bla.com:80=8000,bla.fff.com:80=9999@world;addd:80=9999"
   tty: true
   stdin: true
