Added caddyfile template checks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ caddy:
   labels:
     io.rancher.container.pull_image: always
     io.rancher.scheduler.affinity:host_label: jmca.frontend=true
-  command: /bin/sh
+  #command: /bin/sh
   environment:
-    - HOSTS=cad3/isawesome;isawesome.192.168.10.2.xip.io:80=80,isawesome2.192.168.10.2.xip.io:80=80@isawesome/rufus;rufus.192.168.10.2.xip.io:80=80
+    - HOSTS=cad3/isawesome;isawesome.192.168.10.2.xip.io:80=80,isawesome2.192.168.10.2.xip.io:80=80
+      @isawesome/rufus;rufus.192.168.10.2.xip.io:80=80
+      @hello/world;hello.192.168.10.2.xip.io:80=80
   tty: true
   stdin: true
